--- a/imports/ui/pages/lanes/ship_lane/ship_lane.css
+++ b/imports/ui/pages/lanes/ship_lane/ship_lane.css
@@ -59,6 +59,7 @@ pre {
   background: #666;
   padding: 0 5px;
   color: #ffae00;
+  border-radius: 2px;
 }
 
 .ship-lane-page figure p {
